--- a/app_gestao_proj/templates/app_gestao_proj/forms_projeto.html
+++ b/app_gestao_proj/templates/app_gestao_proj/forms_projeto.html
@@ -66,8 +66,8 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered">
-                    <thead class="table-light text-center">
+                <table class="table table-bordered border-black">
+                    <thead class="table-light text-center border-black">
                         <tr>
                             <th>#id</th>
                             <th>Equipe Responsável</th>
